--- a/videoprokat_winform/videoprokat_winform.csproj
+++ b/videoprokat_winform/videoprokat_winform.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
+    <PackageReference Include="NSubstitute" Version="4.2.2" />
   </ItemGroup>
 
 </Project>
