migrated from EF6 to EF Core

--- a/videoprokat_winform/App.config
+++ b/videoprokat_winform/App.config
@@ -2,7 +2,6 @@
 <configuration>
   <connectionStrings>
     <add name="MyConnection"
-         connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=videoprokat_winform;Integrated Security=True"
-         providerName="System.Data.SqlClient" />
+         connectionString="Server=.\SQLEXPRESS;Database=videoprokat_winform;Trusted_Connection=True" />
   </connectionStrings>
 </configuration>
