--- a/videoprokat_winform.Tests/videoprokat_winform.Tests.csproj
+++ b/videoprokat_winform.Tests/videoprokat_winform.Tests.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="JetBrains.DotMemoryUnit" Version="3.1.20200127.214830" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="coverlet.collector" Version="1.3.0" />
     <PackageReference Include="NSubstitute" Version="4.2.2" />
